--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -100,7 +100,7 @@
   doi={https://doi.org/10.1016/j.ipm.2023.103321},
   pdf={2023-IPM.pdf},
   selected={true},
-  abbr={Journal}
+  abbr={IPM}
 }
 
 @article{zheng2023exploration,
@@ -115,7 +115,7 @@
   abstract={In this fast-aging society, many older adults fail to meet the required level of exercise due to trainer shortages. Therefore, we developed a robot tutor to investigate the feasibility of robot-mediated exercise for older adults. Twenty older adults participated in an experimental study. A pre-exercise survey was used to assess their background. Each participant experienced a 30-min robot-led Tai Chi exercise followed by a post-exercise survey to evaluate the easiness of following the robot and expectations for future robot design. Participants’ Tai Chi performances were evaluated in terms of completion and accuracy. Associations between the surveys and the performance were also analyzed. All participants completed the study. Fifteen out of the twenty subjects had at least one chronic condition, and most practiced Tai Chi before the study but had never interacted with a robot. On average, the participants scored 93.09 and 85.21 out of 100 for movement completion and accuracy, respectively. Their initial movement accuracy was correlated with their attitude towards exercise. Most subjects reported that they could follow the robot’s movements and speeches well and were interested in using a robot tutor in the community. The study demonstrated the initial feasibility of robot-led Tai Chi exercise for older adults.},
   doi={https://doi.org/10.3390/app13095306}, 
   pdf={2023-AP.pdf},
-  abbr={Journal}
+  abbr={AS}
 }
 
 @article{choi2023exploring,
@@ -132,7 +132,7 @@
   pdf={2023-ASIST-ShortPaper.pdf},
   slides={2023-ASIST-ShortPaper-Slides.pdf},
   selected={true},
-  abbr={ConfProc}
+  abbr={ASIST}
 }
 
 @article{choi2023preliminary,
@@ -148,7 +148,7 @@
   doi={https://doi.org/10.1002/pra2.901},
   pdf={2023-ASIST-Abstract.pdf},
   poster={2023-ASIST-Poster.pdf},
-  abbr={ConfProc}
+  abbr={ASIST}
 }
 
 @article{choi2022design,
@@ -162,7 +162,7 @@
   doi={https://doi.org/10.20879/acr.2022.19.3.119},
   abstract={This study explored what makes users perceive a website as a credible source of health information and how web credibility assessment, in turn, influences their health information-seeking behaviors. Exploratory factor analysis was conducted with survey responses from college students (NN = 141) who assessed credibility markers of a website they normally visit to address health concerns. A 4-factor solution emerged as the best summary of the data: (a) content, (b) interaction design, (c) information design, and (d) source. Identified components were used in a linear model to explore the effects of different web credibility types on perceptual, attitudinal, and behavioral outcomes. Alongside content-related attributes (e.g., recency of the information), interaction design-related elements (e.g., ability to interact with other users) were significantly associated with most dependent variables examined in the study (e.g., trust in the information on the site, willingness to follow the advice, and willingness to recommend the site to others). Current results imply that users count on not only content-related cues or heuristics, but also interactive design features as helpful tools for mobilizing social resources (e.g., fellow users) to validate online health information. Theoretical and practical implications of the study findings and future research directions are discussed.},
   pdf={2022-ACR.pdf},
-  abbr={Journal}
+  abbr={ACR}
 }
 
 @article{choi2022associations,
@@ -177,7 +177,7 @@
   doi={https://doi.org/10.1002/asi.24556},
   abstract={Given the aging world, it is important to understand older adults' everyday life information seeking (ELIS), which plays a vital role in healthy aging in later life. The present study analyzed national survey data collected by the Pew Research Center in 2016 based on Savolainen's ELIS model. The model's core concept, mastery of life, was measured in terms of general coping style to find information (cognitive vs. affective) and expectations about the findability of necessary information (optimistic vs. pessimistic). Weighted multiregression analyses were conducted to examine the associations between mastery of life and ELIS behavior of older Americans (65 years or older) in terms of breath and depth of interest in everyday topics, holding other sociocultural and demographic factors constant. The results showed a cognitive, as opposed to affective, coping style was associated with a wider range of ELIS topics and a deeper level of interest in political and cultural topics. However, whether an individual had an optimistic or pessimistic perspective toward information seeking was not associated with the variety or depth of interest in everyday topics. Neither dimension was related to the depth of interest in sports topics. Practical, theoretical, and methodological implications of the findings are provided.},
   pdf={2022-JASIST.pdf},
-  abbr={Journal}
+  abbr={JASIST}
 }
 
 @article{park2022understanding,
@@ -191,7 +191,7 @@
   doi={https://doi.org/10.4017/gt.2022.21.1.798.12},
   abstract={Background: As our society gets older, the implications of information and communication technologies (ICT)-based healthcare have increased. Although the adoption of ICTs has dramatically changed the landscape of the health sector since the early 1950s, the benefits that ICTs could bring to dementia care have been relatively unexplored. Objective: This paper mined the research articles for insights into how relationships between ICTs and assistive technologies (ATs) in dementia care have been developed historically and should be cultivated in the future. Method: Using text-mining techniques, 2,030 journal articles regarding ATs in relation to ICTs in dementia care published from 1970 to 2020 were analyzed. The literature was retrieved from the Web of Science, PubMed, PsycINFO, and IEEE Xplore digital library. Results: Despite the active integration of ICTs in many other sectors, the literature demonstrated that research regarding ICT integration in ATs for dementia interventions occurred only after the 1990s. The analysis results also indicate that studies have moved toward supporting the aging-in-place of people with dementia, encompassing major research interests such as assisting with daily activities of living, modifying the home, and promoting recreational activities. A research gap was also identified in technology adoption to support the social interactions of those with dementia, which is a key part of enhancing the quality of life. Conclusion: The research that addressed ICT integration with ATs for dementia care has been evolving and moving from issues of safety and security to maintaining autonomy of people with dementia in their own place.},
   pdf={2022-Geron.pdf},
-  abbr={Journal}
+  abbr={GERONTECH}
 }
 
 @article{lee2022respite,
@@ -205,7 +205,7 @@
   publisher={SAGE Publications Sage CA: Los Angeles, CA},
   doi={https://doi.org/10.1177/07334648221075620},
   abstract={This study examined factors related to respite service use among caregivers and further tested the moderating effect of dementia caregiver status in these relationships using nationally representative U.S. data. Logistic regression analyses were conducted among 1203 caregivers (276 dementia and 927 nondementia caregivers). Caregivers’ race and ethnicity as a predisposing factor, caregivers’ self-rated health as an enabling factor, and care recipients’ living arrangement and functional limitations as need factors were significantly related to respite service use. Moreover, dementia caregiver status moderated the association between enabling factors (i.e., household income, work status, and self-rated health) and respite service use. Our findings imply that dementia caregivers may be more in need of respite service use than nondementia caregivers when they have limited enabling factors (e.g., lower household income, nonworking status, poorer health). Policy and practice efforts that specifically support enabling factors are suggested to promote more respite service use among dementia caregivers.},
-  abbr={Journal}
+  abbr={JAG}
 }
 
 @article{choi2022developing,
@@ -218,7 +218,7 @@
   pdf={2022-iConf-Abstract.pdf},
   poster={2022-iConf-Poster.pdf},
   video={https://drive.google.com/file/d/1eEhqiOi3d_I32uTkx8DWrYtmA_uJ6jIN/view?usp=drive_link},
-  abbr={ConfProc}
+  abbr={iConf}
 }
 
 @article{wang2021feature,
@@ -231,7 +231,7 @@
   publisher={Elsevier},
   doi={https://doi.org/10.1016/j.ijmedinf.2021.104598},
   abstract={Background and objective: Diabetes and hypertension are two prevalent and related chronic conditions. To inform the design and development of mobile health applications (mHealth apps) for people living with multiple chronic conditions, this paper examines features mentioned in developers’ descriptions and user reviews of mHealth apps, along with users’ attitudes toward associated features. Materials and methods: Eleven top apps for diabetes and hypertension were identified from Google Play as of January 2020. Based on a stratified sampling strategy, 1,100 user reviews were selected to form the final dataset. Developers’ descriptions were also collected for analysis. Using the grounded theory approach, we developed a feature-oriented coding scheme, which was used to identify three levels of features mentioned in app descriptions and user reviews: feature group (the highest level), feature type (the second level), and individual feature (the lowest level). Users’ attitudes toward app features mentioned in user reviews were also analyzed. Results: Most top-rated apps for diabetes and hypertension under study were multifeatured, incorporating self-management, information sharing, and decision support features. At the feature-group level, most informative user reviews commented on features related to self-management, followed by decision support and information sharing. The four most frequently mentioned feature types were data entry, data export/import, data visualization, and assessment. Users expressed overwhelming positive attitudes toward app features across all feature categories. Based on users’ assessments of existing features and requests for additional features, design implications for app development are provided. Conclusions: Despite the diversity of app features provided by mHealth apps and users’ primarily positive attitudes toward existing app features, more comprehensive and personalized features are expected by app users to satisfy their health needs. Beyond identifying app features in user reviews, future research may seek more in-depth feedback from real-life patients for app development and design using methods like interviews and focus groups, to further enhance the overall quality of relevant mHealth apps to better support users.},
-  abbr={Journal}
+  abbr={IJMI}
 }
 
 @article{choi2020validating,
@@ -246,7 +246,7 @@
   doi={https://doi.org/10.1002/pra2.357},
   abstract={This methodology poster introduces an ongoing study seeking to validate an extended typology of web credibility assessments proposed by Choi and Stvilia (2015) using online surveys. The study focuses on health-related topics as an important subject domain for web credibility assessments. The poster describes the study's theoretical background and methodology, especially the process of developing and testing the online survey questionnaire, which consists of 89 questions in five sections: internet use and experience, health information seeking, web credibility assessment, outcomes of web credibility assessment, and demographic factors. A pretest of the online survey questionnaire was conducted with eight doctoral students, in which each participant answered the questions and provided feedback on the survey design. Pretest results and future research directions are discussed.},
   pdf={2020-ASIST-Poster.pdf},
-  abbr={ConfProc}
+  abbr={ASIST}
 }
 
 @article{choi2020older,
@@ -258,7 +258,7 @@
   doi={https://doi.org/10.1002/asi.24341},
   abstract={Credibility assessment is a crucial component in the process of peopleʼs health information seeking, especially in the web context. Finding “credible” health information from a plethora of information on the web may be more challenging for older adults, who have relatively less experience with the Internet. This article reports on the findings of an exploratory study of older adultsʼ credibility assessments of online health information. The data collected through semistructured interviews with 21 older adult Internet users in the United States were analyzed based on the extended typology of web credibility (Choi & Stvilia, 2015, Journal of the Association for Information Science and Technology, 66, 2399–2414). The findings of the study revealed that older adults paid closer attention to operator-related credibility cues and heuristics when judging the credibility of health information on the web, followed by content- and design-related ones. Also, the findings suggest that participants who were younger and used the Internet more frequently employed a wider variety of cues and heuristics to evaluate the credibility of online health information. Based on these findings, both theoretical and practical implications of the research and future research directions are discussed.},
   pdf={2020-JASIST.pdf},
-  abbr={Journal}
+  abbr={JASIST}
 }
 
 @article{choi2020systematic,
@@ -273,7 +273,7 @@
   doi={https://doi.org/10.1093/jamia/ocaa029},
   abstract={Objective: This article reports results from a systematic literature review of the current state of mobile health (mHealth) technologies that have the potential to support self-management for people with diabetes and hypertension. The review aims to (a) characterize mHealth technologies used or described in the mHealth literature and (b) summarize their effects on self-management for people with diabetes and hypertension from the clinical and technical standpoints. Materials and Methods: A systematic literature review was conducted following PRISMA guidelines. Online databases were searched in September 2018 to identify eligible studies for review that had been published since 2007, the start of the smartphone era. Data were extracted from included studies based on the PICOS framework. Results: Of the 11 studies included for in-depth review, 5 were clinical research examining patient health outcomes and 6 were technology-focused studies examining users’ experiences with mHealth technologies under development. The most frequently used mHealth technology features involved self-management support (n = 11) followed by decision support (n = 6) and shared decision-making (n = 6). Most clinical studies reported benefits associated with mHealth interventions. These included reported improvements in objectively measured patient health outcomes (n = 3) and perceptual or behavioral outcomes (n = 4). Discussion: Although most studies reported promising results in terms of the effects of mHealth interventions on patient health outcomes and experience, the strength of evidence was limited by the study designs. Conclusion: More randomized clinical trials are needed to examine the promise and limitations of mHealth technologies as assistive tools to facilitate the self-management of highly prevalent comorbidity of chronic conditions, such as diabetes and hypertension.},
   pdf={2020-JAMIA.pdf},
-  abbr={Journal}
+  abbr={JAMIA}
 }
 
 @article{oh2019challenges,
@@ -302,7 +302,7 @@
   doi={https://doi.org/10.1177/1460458217735676},
   abstract={Osteoarthritis is a common chronic disease that can be better treated with the help of self-management interventions. Mobile health (mHealth) technologies are becoming a popular means to deliver such interventions. We reviewed the current state of research and development of mHealth technologies for osteoarthritis self-management to determine gaps future research could address. We conducted a systematic review of English articles and a survey of apps available in the marketplace as of 2016. Among 117 unique articles identified, 25 articles that met our inclusion criteria were reviewed in-depth. The app search identified 23 relevant apps for osteoarthritis self-management. Through the synthesis of three research themes (osteoarthritis assessment tools, osteoarthritis measurement tools, and osteoarthritis motion monitoring tools) that emerged from the current knowledge base, we provide a design framework to guide the development of more comprehensive osteoarthritis mHealth apps that facilitate self-management, decision support, and shared decision-making.},
   pdf={2019-HIJ.pdf},
-  abbr={Journal}
+  abbr={HIJ}
 }
 
 @article{wang2019assessing,
@@ -317,7 +317,7 @@
   doi={https://doi.org/10.1002/pra2.178},
   abstract={With advances in mobile health (mHealth) technology and growing ownership of smartphones, mHealth applications have great potential to support patients' self-management of chronic diseases such as diabetes and hypertension. Informative consumer reviews on app stores (e.g., Google Play) are a useful source of information for app developers to understand users' needs and for users to select a pertinent app over similar alternatives. This poster reports preliminary findings of a study that explores factors affecting the informativeness of consumer reviews using a feature-centered rating scale. The results show that consumer ratings and the length of consumer reviews are both correlated with informativeness. These findings will contribute to filtering informative reviews for future in-depth analyses of app features.},
   pdf={https://asistdl.onlinelibrary.wiley.com/doi/epdf/10.1002/pra2.178},
-  abbr={ConfProc}
+  abbr={ASIST}
 }
 
 @article{choi2019analyzing,
@@ -333,7 +333,7 @@
   abstract={In this work in progress, we explore methods employed by professional journalists to fact-check political claims and debunk inaccurate (“fake”) news stories. We content-analyzed 150 articles evaluating political claims and debunking fake news published by two media companies, the Washington Post (United States) and JTBC (South Korea), during the periods surrounding the recent presidential elections in their respective countries. Overall, the most common types of claims evaluated included false claims made by politicians or political groups about their opponents' positions and numerical and nonnumerical facts. The most frequently used methods for debunking such false claims included consulting with an independent expert in the given topic domain and checking government statistics or documents. There were some variations in the types of false claims focused and debunking methods used between the two fact-checking organizations.},
   pdf={2019-ASIST-Abstract.pdf},
   poster={2019-ASIST-Poster.pdf},
-  abbr={ConfProc}
+  abbr={ASIST}
 }
 
 @article{choi2019older,
@@ -348,7 +348,7 @@
   doi={https://doi.org/10.1016/j.lisr.2019.100983},
   abstract={Health information seeking is an important part of older adults' everyday lives as they cope with their health conditions. Semi-structured interviews conducted with 21 older adults in the United States were analyzed using Savolainen's everyday life information seeking (ELIS) model, especially its key concepts such as way of life and mastery of life. The interview data revealed that except for health care providers, a spouse or partner was mentioned as a credible interpersonal source of health information among older adults in a marital or romantic relationship. Characteristics of older adults' health information behavior in the ELIS context were identified based on types of way of life and mastery of life. For example, those who had more varied types of hobbies, including cognitive, affective, and social hobbies, were exposed to diverse people as they performed their daily routine, potentially resulting in different sources of useful health information. In couple relationships, those with an optimistic as opposed to pessimistic attitude toward a problem-solving situation played the information provider role rather than information receiver role.},
   pdf={2019-LISR.pdf},
-  abbr={Journal}
+  abbr={LISR}
 }
 
 @article{tulu2017framework,
@@ -372,7 +372,7 @@
   abstract={User interface (UI) is a crucial component of any application, including mHealth apps, as UI directly affects the user–app interaction, which then determines the concrete user experience with the app. This paper presents the results of an experimental study that examines the effects of data entry UI types and task complexity on user experience within the context of a mobile app. We used a 2 (touch technique: tap vs. slide) X 2 (target direction: vertical vs. horizontal) X 2 (task complexity: simple vs. complex) design. Our findings indicate that UI design in terms of touch technique and target direction, as well as task complexity have a significant impact on the task completion time. As for error rate, however, we did not find any significant differences by UI design or task complexity level.},
   poster={2017-AMCIS-ERF-Poster.pdf},
   slides={2017-AMCIS-ERF-Slides.pdf},
-  abbr={ConfProc}
+  abbr={AMCIS}
 }
 
 @article{choi2017effective,
@@ -384,7 +384,7 @@
   abstract={The effect of user interface (UI) design decisions on system usability has been discussed in information system literature. These discussions evolved into investigating the effectiveness of UI and how it affects a system user’s performance, as well as his or her perception of the system as a whole. This paper investigates the role of UI design on facilitating effective use in the context of mobile applications. Based on the Effective Use Theory, we test four different UIs developed for frequent data input tasks in a mobile platform using a controlled experiment and a follow-up survey. Our findings indicate that UI design in terms of touch technique (tap vs. slide) and target direction (vertical vs. horizontal) has a significant impact on the task completion time, as well as the app UIs’ perceived usability and likability. We discuss both theoretical and empirical implications of the results and suggest future research directions.},
   pdf={2017-HICSS-Paper.pdf},
   slides={2017-HICSS-Slides.pdf},
-  abbr={ConfProc}
+  abbr={HICSS}
 }
 
 @article{zheng2016using,
@@ -394,7 +394,7 @@
   year={2016},
   abstract={Introduction: Arthritis of the knee is the most common physical disability in US adults. For advanced knee arthritis patients, total knee replacement (TKR) is a surgical intervention that can effectively eliminate pain and improve physical function. Before choosing TKR, patients and clinicians must consider the risks and benefits of TKR and determine if the likely outcomes will meet the patient’s individual goals. Patient-reported outcome (PRO) measures have been widely used in orthopedic clinical research to summarize the patient's arthritis pain severity and functional limitations before and after TKR. A national research registry, Function and Outcomes Research for Comparative Effectiveness in Total Joint Replacement (FORCE-TJR), successfully collected PRO measures from 13,000 primary TKR patients of over 150 surgeons in 28 states and disseminated aggregate comparative outcomes to participating hospitals and surgeons. To translate these outcomes to patients, an AHRQ-funded mHealth study is designing and testing a mobile app translating FORCE-TJR outcome data to provide knee arthritis patients with information and education about timing, value, and individualized likely outcomes from TKR to support patient and clinician shared treatment decision making. Methods: We developed an Android-based smart phone app for knee arthritis patients to assess arthritis symptoms and individual readiness for TKR surgery. Tailored, patient-centered outcome prediction models from the FORCE-TJR cohort provide refined outcome estimates. Patient focus groups and clinician interviews were conducted to obtain patients’ and clinicians’ feedback on their preferred graphic displays of data, questions, and evaluation results. Laboratory and field usability testing are beginning to finalize the app content and format. Findings: Three patient focus groups were conducted between December 2015 and February 2016. The preliminary findings from the focus groups revealed that the patients prefer easy tap user interfaces to multi-tap or slider methods, vertical question layout to horizontal orientation, and both numbered and worded rating scales to only using words. With input, a tailored report was designed with individual patient factors and trended pain and function history over time, based on FORCE-TJR data. Final clinician interviews are being conducted to evaluate the app’s shared report. Conclusions: An mHealth app was designed to disseminate tailored patient-centric outcome predictions developed from a contemporary national TKR cohort with refined usability and display features to meet the needs of knee arthritis patients faced with surgical treatment decisions. Dissemination of patient-reported symptoms and outcomes from recent TKR patients will support patient decision engagement and shared decision making for future knee arthritis patients. Lessons Learned: User input can inform the design and implementation of mHealth technology to deliver tailored knowledge to patients through a user-defined, patient-centered smart phone app. The tool will support future knee arthritis patient decisions regarding the need for, and timing of TKR surgery.},
   html={https://academyhealth.confex.com/academyhealth/2016concordium/meetingapp.cgi/Paper/13102},
-  abbr={Journal}
+  abbr={ConfProc}
 }
 
 @article{choi2016developing,
@@ -405,7 +405,7 @@
   abstract={Given the prevalence of osteoarthritis (OA) and the potential usefulness of mHealth technologies for OA self-management and treatment decisions, the authors attempt to develop an mHealth App that is particularly focused on OA. As part of a larger project, the authors have conducted two focus groups exploring OA patients’ perceptions of pain data input user interfaces (UIs), pain scale, and requirements for the mHealth App on OA. The preliminary findings from the focus groups revealed that the patients preferred the Tap-Horizontal UI the most, while the Tap-Tap-Tap type of UIs were always rated lower than other types of UIs in the study. In regard to the pain scale, most participants highlighted that including numeric rating scales along with the corresponding wording would help them gauge their pain levels more accurately. Lastly, the focus group discussions and free sketch session generated useful ideas around the functional requirements and design insights.},
   html={https://aisel.aisnet.org/amcis2016/Health/Presentations/25/},
   poster={2016-AMCIS-ERF-Poster.pdf},
-  abbr={ConfProc}
+  abbr={AMCIS}
 }
 
 @article{yang2016publication,
@@ -419,7 +419,7 @@
   abstract={},
   doi={https://doi.org/10.22452/mjlis.vol21no2.5},
   pdf={2016-MJLIS.pdf},
-  abbr={Journal}
+  abbr={MJLIS}
 }
 
 @article{yang2015looking,
@@ -434,7 +434,7 @@
   abstract={Bibliometric analysis for research performance evaluation can generate erroneous assessments for various reasons. Application of the same evaluation metric to different domains, for instance, can produce unfair evaluation results, while analysis based on incomplete data can lead to incorrect conclusions. This study examines bibliometric data of library and information science (LIS) research in Korea to investigate whether research performance should be evaluated in a uniform manner in multi-disciplinary fields such as LIS and how data incompleteness can affect the bibliometric assessment outcomes. The initial analysis of our study data, which consisted of 4,350 citations to 1,986 domestic papers published between 2001 and 2010 by 163 LIS faculty members in Korea, showed an anomalous citation pattern caused by data incompleteness, which was addressed via data projection based on past citation trends. The subsequent analysis of augmented study data revealed ample evidence of bibliometric pattern differences across subject areas. In addition to highlighting the need for a subject-specific assessment of research performance, the study demonstrated the importance of rigorous analysis and careful interpretation of bibliometric data by identifying and compensating for deficiencies in the data source, examining per capita as well as overall statistics, and considering various facets of research in order to interpret what the numbers reflect rather than merely taking them at face value as quantitative measures of research performance.},
   doi={https://doi.org/10.4275/KSLIS.2015.49.4.241},
   pdf={2015-JKSLIS.pdf},
-  abbr={Journal}
+  abbr={JKSLIS}
 }
 
 @article{choi2015new-a,
@@ -443,11 +443,11 @@
   journal={iConference 2015 Proceedings},
   year={2015},
   publisher={iSchools},
-  abbr={ConfProc},
   pdf={2015-iConf-Poster-Manu.pdf},
   html={https://www.ideals.illinois.edu/items/73945},
   poster={2015-iConf-Poster.pdf},
-  abstract={This poster reports on a study that used a literature analysis to develop a new, extended conceptual framework for Web credibility assessment. The proposed framework conceptualizes the relationship among the key dimensions of credibility (i.e., trustworthiness and expertise), related measures, and objects of those measures (i.e., source, message, and media) that have been identified in the literature. The framework will be tested through empirical data. In particular, an online survey questionnaire will be developed in accordance with the new framework and distributed to college students for data collection. The outcomes of this study will include the new framework and survey questionnaire that could be used as reusable knowledge resources in development of credibility assessment models in different online contexts.}
+  abstract={This poster reports on a study that used a literature analysis to develop a new, extended conceptual framework for Web credibility assessment. The proposed framework conceptualizes the relationship among the key dimensions of credibility (i.e., trustworthiness and expertise), related measures, and objects of those measures (i.e., source, message, and media) that have been identified in the literature. The framework will be tested through empirical data. In particular, an online survey questionnaire will be developed in accordance with the new framework and distributed to college students for data collection. The outcomes of this study will include the new framework and survey questionnaire that could be used as reusable knowledge resources in development of credibility assessment models in different online contexts.},
+  abbr={iConf}
 }
 
 @article{stvilia2015mobile,
@@ -462,7 +462,7 @@
   doi={https://doi.org/10.1016/j.lisr.2015.04.007},
   abstract={This research explored the mobile wellness application-seeking behavior of college students. In particular, it examined what sources students used to obtain wellness information, what wellness applications students used and for what purposes, how they learned about those applications, and what factors influenced their decision to choose a particular wellness application from multiple alternatives. The results indicated that students most often used websites as sources of wellness information, followed by mobile applications, family and friends, and then physicians. Students most often learned about wellness applications from search engines and application stores. Physicians were the least mentioned source of learning about mobile wellness applications. The most popular application type was calorie and activity trackers. In addition, when asked to rate the importance of various mobile application characteristics in their decision to select a particular wellness application, students rated usability-related characteristics the highest, followed by application cost and content quality. This study contributes to current research and practice in mobile wellness application design and the provision of mobile wellness services. In particular, it can inform application designers and intermediaries about which mobile wellness applications students use, and how students search for and select those applications.},
   pdf={2015-LISR.pdf},
-  abbr={Journal}
+  abbr={LISR}
 }
 
 @article{choi2015web,
@@ -476,7 +476,7 @@
   doi={https://doi.org/10.1002/asi.23543},
   abstract={This article reviews theoretical and empirical studies on information credibility, with particular questions as to how scholars have conceptualized credibility, which is known as a multifaceted concept with underlying dimensions; how credibility has been operationalized and measured in empirical studies, especially in the web context; what are the important user characteristics that contribute to the variability of web credibility assessment; and how the process of web credibility assessment has been theorized. An agenda for future research on information credibility is also discussed.},
   pdf={2015-JASIST.pdf},
-  abbr={Journal}
+  abbr={JASIST}
 }
 
 @article{choi2015new-b,
@@ -498,7 +498,7 @@
   abstract={This work-in-progress poster reports on the preliminary findings regarding college students’ value structure of how to choose and utilize mobile health/wellness applications. We have conducted surveys and follow-up interviews with college students who have been using mobile health/wellness applications. In this poster, we analyzed the survey data from sixteen participants and the interview data from five participants (three females and two males). The analysis showed that the most important purposes of using mobile health/wellness applications for college students were recording and managing personal health information/records and keeping up with their fitness plans. For selection criteria, easy to navigate, easy to use, quality of content, customizability, and ratings from other users seemed to play the most important role in college students’ choices of certain mobile applications among alternatives.},
   pdf={2014-iConf-Poster-Manu.pdf},
   poster={2014-iConf-Poster.pdf},
-  abbr={ConfProc}
+  abbr={iConf}
 }
 
 @article{choi2014college,
@@ -511,7 +511,7 @@
   year={2014},
   publisher={Wiley Online Library}, 
   abstract={This poster reports on the findings from interviews with fifty college students regarding what mobile health and wellness applications students used and how they choose those applications. In terms of application types, calorie and daily activity counters, such as MyFitnessPal and Lose It!, were most popular for the participants in the study, followed by running trackers, such as Nike+ Running and MapMyRun, and exercise/workout trackers, such as Fitness Buddy and Ab Workouts. Students seemed to prefer free applications and they evaluated and chose applications both indirectly (i.e., based on third party information and recommendations) and directly (i.e., through use).},
-  abbr={ConfProc},
+  abbr={ASIST},
   pdf={2014-ASIST-Poster.pdf},
   doi={https://asistdl.onlinelibrary.wiley.com/doi/10.1002/meet.2014.14505101115}
 }
@@ -524,7 +524,8 @@
   number={1},
   pages={1--4},
   year={2013},
-  publisher={Wiley Subscription Services, Inc., A Wiley Company Hoboken}
+  publisher={Wiley Subscription Services, Inc., A Wiley Company Hoboken}, 
+  abbr={ASIST}
 }
 
 @article{lee2013difference,
@@ -535,7 +536,8 @@
   number={1},
   pages={1--4},
   year={2013},
-  publisher={Wiley Subscription Services, Inc., A Wiley Company Hoboken}
+  publisher={Wiley Subscription Services, Inc., A Wiley Company Hoboken},
+  abbr={ASIST}
 }
 
 @article{choi2013use,
@@ -546,7 +548,8 @@
   number={1},
   pages={1--4},
   year={2013},
-  publisher={Wiley Subscription Services, Inc., A Wiley Company Hoboken}
+  publisher={Wiley Subscription Services, Inc., A Wiley Company Hoboken},
+  abbr={ASIST}
 }
 
 @incollection{baeg2012impact,
@@ -554,7 +557,8 @@
   author={Baeg, Jung Hoon and Choi, Wonchan and Lee, Dong Joon and Lee, Jisue},
   booktitle={Proceedings of the 2012 iConference},
   pages={538--540},
-  year={2012}
+  year={2012},
+  abbr={iConf}
 }
 
 @article{zheng2017using,
@@ -565,6 +569,7 @@
   number={2},
   pages={7},
   year={2017}
+  abbr={eGEMs}
 }
 
 @incollection{choi2012senior,
@@ -572,7 +577,8 @@
   author={Choi, Wonchan},
   booktitle={Proceedings of the 2012 iConference},
   pages={620--622},
-  year={2012}
+  year={2012},
+  abbr={iConf}
 }
 
 @article{oh2013sonzogno,
@@ -583,7 +589,8 @@
   number={1},
   pages={1--4},
   year={2013},
-  publisher={Wiley Online Library}
+  publisher={Wiley Online Library},
+  abbr={ASIST}
 }
 
 @incollection{choi2013makes,
@@ -591,7 +598,8 @@
   author={Choi, Wonchan},
   booktitle={CHI'13 Extended Abstracts on Human Factors in Computing Systems},
   pages={2671--2676},
-  year={2013}
+  year={2013},
+  abbr={CHI}
 }
 
 @article{chang2008trends,
@@ -603,7 +611,7 @@
   pages={201--221},
   year={2008},
   publisher={Korean Society For Library And Information Science},
-  abbr={Journal}
+  abbr={JKSLIS}
 }
 
 @article{chang2008development,
@@ -615,5 +623,5 @@
   pages={165--184},
   year={2008},
   publisher={Korean Society for Information Management},
-  abbr={Journal}
+  abbr={KOSIM}
 }
