--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,48 @@
 ---
 ---
+@article{choi2025genai,
+  title={GenAI competencies in higher education: An analysis of existing literacy frameworks},
+  author={Choi, Wonchan and Bak, Hyerin and Stvilia, Besiki and Zhang, Yan},
+  journal={Proceedings of the Association for Information Science and Technology},
+  volume={62},
+  number={1},
+  pages={1399--1401},
+  year={2025},
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA},
+  abstract={As part of a larger project to develop a generative artificial intelligence (GenAI) literacy framework and toolkit for higher education, this poster presents an analysis of seven literacy frameworks relevant to GenAI literacy in academic contexts. Through thematic analysis, we identified 10 competencies essential for GenAI-literate students in higher education. These competencies are organized into four progressive stages: (1) understanding GenAI at conceptual and technical levels and its capabilities and limitations; (2) using GenAI tools purposefully, effectively, and appropriately; (3) analyzing and evaluating various GenAI models and tools for performance and societal, ethical, and legal impacts, and (4) customizing or creating GenAI tools to address specific needs and generate innovative applications or theoretical insights. We discuss key implications of the results and next steps for developing a GenAI literacy framework for higher education.},
+  abbr={ASIST},
+  doi={https://doi.org/10.1002/pra2.1416},
+  pdf={2025-ASIST-Abstract1},
+  poster={2024-ASIST-Poster1}
+}
+
+@article{choi2025developing,
+  title={Developing an Information Credibility Scale for Social Media and AI-generated Content: Insights from Expert and User Reviews},
+  author={Choi, Wonchan and Zhu, Liya and Lee, Hyun Seung},
+  journal={Proceedings of the Association for Information Science and Technology},
+  volume={62},
+  number={1},
+  pages={1396--1398},
+  year={2025},
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA},
+  abstract={This study initiated the development of a new scale to measure perceptions of information credibility on the web, distinguishing between trustworthiness and expertise as core dimensions. Building on a previous analysis of the literature on credibility assessments of information on social media, we generated a pool of 15 items, six for trustworthiness and nine for expertise. Following established scale development guidelines, we refined the scale through expert reviews and cognitive interviews with users. Experts (n = 2) rated most items as highly relevant and offered suggestions for refinement, such as including new items. Users (n = 9) confirmed item clarity but raised concerns about certain terms and perceived objectivity. These preliminary findings support the scale's relevance and will inform revisions for subsequent validation. Ongoing work will expand participant feedback and move toward large-scale empirical testing.},
+  doi={https://doi.org/10.1002/pra2.1415},
+  pdf={2025-ASIST-Abstract2},
+  poster={2025-ASIST-Poster2},
+}
+
+@article{yu2025researching,
+  title={Researching Health Information Behaviors: Landscape, AI's Role and Its Impact},
+  author={Yu, Xinchen and Zhang, Yan and Choi, Wonchan and Chen, Annie T},
+  journal={Proceedings of the Association for Information Science and Technology},
+  volume={62},
+  number={1},
+  pages={1315--1319},
+  year={2025},
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA},
+  abstract={Health information behavior research occupies a central position within the field of Library and Information Science (LIS), given its emphasis on the complex interaction between health-related information, human, and technology. While health information behavior research has been steadily progressing over time, it has undergone significant evolution with the advancement of digital technologies such as artificial intelligence. The goal of this panel is to bring together scholars who have actively contributed to health information behavior research, with a specific focus on the integration of Artificial Intelligence (AI) into health-related information and information behavior settings. Additionally, we will present our research on the current landscape of health information behavior, the applications of AI in researching health information behavior, its limitations, and its societal impact. These insights will spark discussions among participants and help foster a deeper understanding of the opportunities and the responsible use of AI technologies in health information behavior research.},
+  doi={https://doi.org/10.1002/pra2.1390},
+}
 
 @article{choi2025mturk,
   title={Perceived importance and predictive power: Key criteria for judging information credibility on social Q&A platforms},
