--- a/_news/2025-11-14.md
+++ b/_news/2025-11-14.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Best Published SIG AI Paper
+title: Received the Best Published SIG AI Paper.
 date: 2025-11-14
 inline: false
 related_posts: false
